[gd_scene load_steps=6 format=3 uid="uid://dsr4uau6ubum8"]

[ext_resource type="Script" uid="uid://dqsoyeqe66eia" path="res://scripts/ball-components/pool_stick.gd" id="1_o05ts"]
[ext_resource type="Texture2D" uid="uid://h5twy65whfri" path="res://visuals/poolstick/Untitled-1_0000_Layer-5.png" id="2_bbjnh"]
[ext_resource type="Texture2D" uid="uid://dvvil3luvwjx0" path="res://visuals/poolstick/Untitled-1_0001_Layer-4.png" id="3_pb25y"]
[ext_resource type="Texture2D" uid="uid://c84tseqlpio8y" path="res://visuals/poolstick/Untitled-1_0002_Layer-3.png" id="4_lrl5t"]

[sub_resource type="SpriteFrames" id="SpriteFrames_snpxv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bbjnh")
}, {
"duration": 1.0,
"texture": ExtResource("3_pb25y")
}, {
"duration": 1.0,
"texture": ExtResource("4_lrl5t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="PoolStick" type="Node2D"]
script = ExtResource("1_o05ts")

[node name="PoolStickSpr" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-927, -13)
sprite_frames = SubResource("SpriteFrames_snpxv")
frame_progress = 0.50987077

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
